--- a/Resources/Styles/Animations.xaml
+++ b/Resources/Styles/Animations.xaml
@@ -10,6 +10,13 @@
         </DoubleAnimationUsingKeyFrames>
     </Storyboard>
 
+    <Storyboard x:Key="PopupFadeInAnimation">
+        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleX)" From="0.6" To="1" Duration="0:0:0.14"/>
+        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(ScaleTransform.ScaleY)" From="0.6" To="1" Duration="0:0:0.14"/>
+        <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.08"/>
+    </Storyboard>
+
+
     <Storyboard x:Key="ShowAccountBorderAnimation">
         <DoubleAnimation Storyboard.TargetProperty="Opacity"
                          From="0" To="1" Duration="0:0:0.3"/>
@@ -25,5 +32,12 @@
                         From="0,0,0,0" To="0,-20,0,0"
                         Duration="0:0:0.3" AccelerationRatio="0.4"/>
     </Storyboard>
+
+    <Storyboard x:Key="RotateAnimation" RepeatBehavior="Forever">
+        <DoubleAnimation
+            Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
+            From="0" To="360" Duration="0:0:1.4"/>
+    </Storyboard>
+
 
 </ResourceDictionary>
