--- a/Views/Dialogs/LoadingDialog.xaml
+++ b/Views/Dialogs/LoadingDialog.xaml
@@ -1,12 +1,28 @@
 ﻿<UserControl x:Class="ItaliaPizzaClient.Views.Dialogs.LoadingDialog"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ItaliaPizzaClient.Views.Dialogs"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+              xmlns:local="clr-namespace:ItaliaPizzaClient.Views.Dialogs"
+              mc:Ignorable="d"
+              Height="140" Width="140">
+    <Border Background="{DynamicResource BackgroundBrush}" CornerRadius="16">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Image x:Name="LoadIcon" Source="/Resources/Icons/loading-icon.png"
+                   RenderOptions.BitmapScalingMode="HighQuality"
+                   Width="50" Height="50"
+                   VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Image.RenderTransform>
+                    <RotateTransform x:Name="LoadIconRotate" Angle="0" CenterX="25" CenterY="25"/>
+                </Image.RenderTransform>
+            </Image>
+
+            <TextBlock Text="Cargando..."
+                       Style="{DynamicResource SubtitleLabelStyle}"
+                       FontSize="14"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Margin="0 12 0 0"/>
+        </StackPanel>
+    </Border>
 </UserControl>
